...
    <string name="timeout">TIMEOUT</string>
    <string name="reduce_timeout">-1</string>
    <string name="increase_timeout">+1</string>
    <string name="clear_timeout">CLEAR TIMEOUT</string>

    <string name="foul_card">Foul Card section</string>
    <string name="blue">1 Minute</string>
    <string name="blue_card_button">Blue Card</string>
    <string name="yellow">1 Minute</string>
    <string name="yellow_card_button">Yellow Card</string>
    <string name="red">2 Minutes</string>
    <string name="red_card_button">Red Card</string>
    <plurals name="minutes">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>

...
    <string name="notification_fc_desc">Foul card %1$d has expired</string>
    <string name="notification_heat_desc">Heat timer has expired</string>

    <!-- Heat alert dialog -->
    <string name="heat_title">Heat timer expired</string>
    <string name="heat_message">The heat timer has expired</string>
    <string name="heat_positive">OK</string>

    <!-- Reset alert dialog -->
    <string name="reset_title">Confirm</string>
    <string name="reset_message">Are you sure you want to reset the timer?</string>
    <string name="reset_positive">Reset</string>
    <string name="cancel">Cancel</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="timers_header">Timer Lengths (Minutes)</string>
    <string name="other_header">Other Settings</string>
    <string name="about_header">About</string>

    <!-- Timer Length Preferences -->
    <string name="flag_length_key">flagLength</string>
    <string name="set_length_flag_t">Secondary timer length</string>
    <string name="timeout_length_key">timeoutLength</string>
    <string name="set_length_timeout_t">Timeout timer length</string>
    <string name="blue_length_key">yellow0Length</string>
    <string name="set_length_blue_card_t">Blue Card timer length</string>
    <string name="yellow_length_key" tools:ignore="Typos">yellow1Length</string>
    <string name="set_length_yellow_card_t">Yellow Card timer length</string>
    <string name="red_length_key">yellow2Length</string>
    <string name="set_length_red_card_t">Red Card timer length</string>
    <string name="heat_length_key">heatLength</string>
    <string name="set_length_heat_t">Repeating heat timer length</string>

    <!-- Other Settings Preferences -->
    <string name="score_inc_key">scoreInc</string>
    <string name="set_score_inc">Score increment</string>
    <string name="audio_vol_key">audioVol</string>
    <string name="set_audio_vol">Audio volume</string>
    <string name="vibe_on_key">vibeOn</string>
    <string name="set_vibe_on">Vibration on timer expiration</string>
    <string name="dark_mode_key">darkMode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="confirm_reset_key">confirmReset</string>
    <string name="set_reset_confirmation">Display \"Confirm Reset\" popup</string>

    <!-- About Section -->
    <string name="version">Version</string>
    <!-- version_name is defined in build.gradle -->
    <string name="IQA">What is Quadball?</string>
...
