...
        android:id="@+id/chronometer"
        tools:text="@string/ten_minutes"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/settingsButton"
        app:srcCompat="@drawable/settings_cog"
...
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"/>

    <TextView
        android:id="@+id/flagCountdown"
        tools:text="@string/ten_minutes"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/resetButton"
        app:srcCompat="@drawable/reset"
        android:contentDescription="@string/reset_button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="100dp"
...
